Changes in version 0.7.0

  New features
    -added default runMacs option to return all segSites
    -added ability to specify seperate male and female genetic maps
    -pullGeno and pullHaplo functions can now specifiy chromosomes
    -added RRBLUP2 for special GS cases
    -improved speed by replacing Rcpp random number generators
    
  Bug fixes
    -fixed population subsetting checks to prevent invalid selections
    -fixed slow calcGCA

Changes in version 0.6.1

  New features
    -selectFam now handles half-sib families
    -selectWithinFam now handles half-sib families
    
  Bug fixes
    -Removed restriction on varE=NULL in setPhenoGCA

Changes in version 0.6.0

  New features
    -Added NEWS file
    -Added selectOP to model selection in open pollinating plants
    -Added runMacs2 as a wrapper for runMacs
    
  Bug fixes
    -Fixed error when using H2 in SimParam_setVarE
    