@@ -1,0 +1,23 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/Class-SimParam.R
+\name{SimParam_restrSnpSites}
+\alias{SimParam_restrSnpSites}
+\title{Restrict SNP sites}
+\arguments{
+\item{chr}{a vector of chromosome postions for eligible 
+SNPs}
+
+\item{site}{a vector of eligible segregating sites within 
+chromosomes}
+
+\item{force}{should the check for a running simulation be 
+ignored. Only set to TRUE if you know what you are doing.}
+}
+\description{
+Sets restrictions on which segregating sites 
+can serve as SNPs.
+}
+\section{Usage}{
+ SP$restrSnpSites(chr=NULL, site=NULL, force = FALSE)
+}
+
